multi-cloud-autoscaling-k8s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wecloud-ingress
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /chat
        pathType: Prefix
        backend:
          service:
            name: spring-chat-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: spring-login-service
            port:
              number: 80
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: spring-profile-service
            port:
              number: 80
